--- a/TODO
+++ b/TODO
@@ -12,10 +12,10 @@ Test ROMs checklist:
 
 CPU instrs:
 01-special						PASS
-02-interrupts					FAIL
-03-sp, hl						FAIL
-04-r, imm						FAIL
-05-rp							FAIL (09 19, probably half carry flag)
+02-interrupts					FAIL 02
+03-sp, hl						FAIL 01
+04-r, imm						FAIL 01
+05-rp							FAIL 01 (09 19, probably half carry flag)
 06-ld							PASS
 07-jr,jp,call,ret,rst			PASS
 08-misc							PASS
