--- a/TODO
+++ b/TODO
@@ -13,9 +13,9 @@ Test ROMs checklist:
 CPU instrs:
 01-special						PASS
 02-interrupts					FAIL 02
-03-sp, hl						FAIL 01
-04-r, imm						FAIL 01
-05-rp							FAIL 01 (09 19, probably half carry flag)
+03-sp, hl						PASS
+04-r, imm						PASS
+05-rp							PASS
 06-ld							PASS
 07-jr,jp,call,ret,rst			PASS
 08-misc							PASS
