--- a/TODO
+++ b/TODO
@@ -12,11 +12,13 @@ Test ROMs checklist:
 
 CPU instrs:
 01-special						PASS
-02-interrupts					FAIL 02
+02-interrupts					FAIL 04
 03-sp, hl						PASS
 04-r, imm						PASS
 05-rp							PASS
 06-ld							PASS
 07-jr,jp,call,ret,rst			PASS
 08-misc							PASS
-09-r							FAIL
+09-r							PASS
+10-bit ops						PASS
+11-op a, (hl)					PASS
